Twenty Twenty-One: Correct RTL margins for left/right aligned blocks.
Follow-up to [49216], [49574].

Props sabernhardt, sagarladani, poena, karmatosed, SergeyBiryukov.
Fixes #56748.
Built from https://develop.svn.wordpress.org/trunk@61490


git-svn-id: http://core.svn.wordpress.org/trunk@60801 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwentyone/style.css
+++ b/wp-content/themes/twentytwentyone/style.css
@@ -2284,11 +2284,21 @@ h6,
 }
 
 .wp-block-image .alignright {
+
+	/*rtl:ignore*/
 	margin-left: var(--global--spacing-horizontal);
+
+	/*rtl:ignore*/
+	margin-right: 0;
 }
 
 .wp-block-image .alignleft {
+
+	/*rtl:ignore*/
 	margin-right: var(--global--spacing-horizontal);
+
+	/*rtl:ignore*/
+	margin-left: 0;
 }
 
 .wp-block-image a:focus img {
@@ -2328,6 +2338,23 @@ h6,
 	.entry-content > .wp-block-image > .alignright {
 		margin-left: 0;
 		margin-right: 0;
+	}
+
+	.entry-content > .wp-block-image > .alignleft:after,
+	.entry-content > .wp-block-image > .alignright:after {
+		content: "";
+		display: block;
+		height: 1px;
+		width: 1em;
+
+		/*rtl:ignore*/
+		float: right;
+	}
+
+	.entry-content > .wp-block-image > .alignright:after {
+
+		/*rtl:ignore*/
+		float: left;
 	}
 }
 
